--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-annotation": "^3.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
